--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Sudoku Game rc 1.1.0</string>
   </property>
   <widget class="QWidget" name="centralWidget">
    <widget class="QFrame" name="mainFrame">
@@ -149,7 +149,7 @@
      <x>0</x>
      <y>0</y>
      <width>694</width>
-     <height>23</height>
+     <height>26</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuGame">
@@ -183,9 +183,15 @@
     <addaction name="actionSolveByComputer"/>
     <addaction name="actionSolveByPeople"/>
    </widget>
+   <widget class="QMenu" name="menuLevelGame">
+    <property name="title">
+     <string>Level-Game</string>
+    </property>
+   </widget>
    <addaction name="menuGame"/>
    <addaction name="menuCheating"/>
    <addaction name="menuSolver"/>
+   <addaction name="menuLevelGame"/>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
    <attribute name="toolBarArea">
